kubernetes/apps/app-cluster/media/sabnzbd/config/http-route-internal.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sabnzbd-internal
  namespace: media
  annotations:
    external-dns.alpha.kubernetes.io/target: kubernetes.krapulax.home
    gethomepage.dev/description: "Usenet downloader (internal)"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: "App Cluster - media"
    gethomepage.dev/href: "http://sabnzbd.krapulax.home"
    gethomepage.dev/icon: "sabnzbd.png"
    gethomepage.dev/name: "Sabnzbd (internal)"
    gethomepage.dev/weight: "10"
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: http
  hostnames:
    - sabnzbd.krapulax.home
  rules:
    - backendRefs:
        - name: sabnzbd
          namespace: media
          port: 8080
