kubernetes/apps/app-cluster/media/sabnzbd/config/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sabnzbd
  namespace: media
  annotations:
    external-dns.alpha.kubernetes.io/hostname: sabnzbd.krapulax.dev
    external-dns.alpha.kubernetes.io/target: external-apps.krapulax.dev
    gethomepage.dev/description: "Usenet downloads"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: "App Cluster - media"
    gethomepage.dev/href: "https://sabnzbd.krapulax.dev"
    gethomepage.dev/icon: "sabnzbd.png"
    gethomepage.dev/name: "SABnzbd"
    gethomepage.dev/weight: "70"
spec:
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: https
  hostnames:
    - sabnzbd.krapulax.dev
  rules:
    - backendRefs:
        - name: sabnzbd
          namespace: media
          port: 8080
